--- a/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
+++ b/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
@@ -6,10 +6,10 @@
                 <app-leito
                     [parentFormGroup]="formGroup"
                     [required]="true"
+                    situacao="liberado"
                     name="leito"
                     label="Leito"
                     (select)="aoSelecionarLeito($event)"
-                    (blur)="aoDesfocarLeito()"
                 >
                 </app-leito>
             </div>
@@ -18,7 +18,7 @@
         <div class="ui-g-12">
             <div class="ui-g-4 ui-md-4 ui-sm-12">
                 <span class="ui-float-label">
-                    <input type="text" pInputText formControlName="situacao" />
+                    <input type="text" pInputText />
                     <label>Situação</label>
                 </span>
             </div>
@@ -83,6 +83,7 @@
                     <p-calendar
                         [locale]="pCalendarConfig.localidade"
                         [yearRange]="pCalendarConfig.anosDisponiveis"
+                        dateFormat="dd/mm/yy"
                         showTime="true"
                         hourFormat="24"
                         showButtonBar="true"
@@ -91,6 +92,41 @@
                         formControlName="dataDoLancamento"
                     ></p-calendar>
                     <label>Data do Lançamento</label>
+                </span>
+            </div>
+        </div>
+        <!-- Data do Início | Data do Fim -->
+        <div class="ui-g-12">
+            <div class="ui-g-4 ui-md-4 ui-sm-12">
+                <span class="ui-float-label">
+                    <p-calendar
+                        [locale]="pCalendarConfig.localidade"
+                        [yearRange]="pCalendarConfig.anosDisponiveis"
+                        dateFormat="dd/mm/yy"
+                        showTime="true"
+                        hourFormat="24"
+                        showButtonBar="true"
+                        [yearNavigator]="true"
+                        [monthNavigator]="true"
+                        formControlName="dataInicio"
+                    ></p-calendar>
+                    <label>Data do Início</label>
+                </span>
+            </div>
+            <div class="ui-g-4 ui-md-4 ui-sm-12">
+                <span class="ui-float-label">
+                    <p-calendar
+                        [locale]="pCalendarConfig.localidade"
+                        [yearRange]="pCalendarConfig.anosDisponiveis"
+                        dateFormat="dd/mm/yy"
+                        showTime="true"
+                        hourFormat="24"
+                        showButtonBar="true"
+                        [yearNavigator]="true"
+                        [monthNavigator]="true"
+                        formControlName="dataFim"
+                    ></p-calendar>
+                    <label>Data do Fim</label>
                 </span>
             </div>
         </div>
