Adiciona liberação de leito

--- a/frontend/src/app/internacao/components/leito/leito.component.html
+++ b/frontend/src/app/internacao/components/leito/leito.component.html
@@ -6,5 +6,6 @@
         [formControlName]="name"
         [filter]="true"
         (onChange)="aoSelecionar()"
+        placeholder="Selecione um Leito"
     ></p-dropdown>
 </form>
