--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -9,8 +9,8 @@
                         <div class="ui-g-12">
                             <div class="ui-g-12">
                                 <span class="md-inputfield">
-                                    <input [(ngModel)]="paciente.id" formControlName="idPaciente" type="text"
-                                        pInputText disabled />
+                                    <input [(ngModel)]="paciente.id" formControlName="idPaciente" type="text" pInputText
+                                        disabled />
                                     <label>Paciente</label>
                                 </span>
                             </div>
@@ -73,7 +73,9 @@
 
                             <div class="ui-g-6">
                                 <span class="md-inputfield">
-                                    <input type="text" pInputText formControlName="tipoUnidadeDietaId" />
+                                    <p-dropdown [autoWidth]="false" placeholder="Selecione..."
+                                        [options]="listaUnidadeDieta" formControlName="tipoUnidadeDietaId">
+                                    </p-dropdown>
                                     <label>Unidade</label>
                                 </span>
                             </div>
@@ -118,15 +120,22 @@
                                 [disableEdit]="true" [disableDelete]="true">
                                 <p-column header="Item" field="tipoItemDietaId">
                                     <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                        <span> {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
+                                        <span>
+                                            {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
                                     </ng-template>
                                 </p-column>
                                 <p-column header="Quantidade" field="quantidade"></p-column>
-                                <p-column header="Unidade" field="tipoUnidadeDietaId"></p-column>
+                                <p-column header="Unidade" field="tipoUnidadeDietaId">
+                                    <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
+                                        <span>
+                                            {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].sigla }}</span>
+                                    </ng-template>
+                                </p-column>
                                 <p-column header="Frequência" field="frequencia"></p-column>
                                 <p-column header="Aprazamento" field="tipoAprazamentoId">
                                     <ng-template let-col="col" let-rowData="rowData" pTemplate="body">
-                                        <span> {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
+                                        <span>
+                                            {{ rowData[col.field] === null || rowData[col.field] === undefined ? undefined : rowData[col.field].descricao }}</span>
                                     </ng-template>
                                 </p-column>
                                 <p-column header="Número vezes" field="numeroVezes"></p-column>
