Corrigindo erros apontados pelo ng build

--- a/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
+++ b/frontend/src/app/prescricao-medica/dieta/prescricao-medica-dieta.component.html
@@ -9,7 +9,7 @@
                         <div class="ui-g-12">
                             <div class="ui-g-12">
                                 <span class="md-inputfield">
-                                    <input [(ngModel)]="paciente.id" formControlName="idPaciente" type="text" pInputText
+                                    <input [(ngModel)]="paciente" formControlName="idPaciente" type="text" pInputText
                                         disabled />
                                     <label>Paciente</label>
                                 </span>
