Criação de componente Pré-Cadastro

--- a/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.html
+++ b/frontend/src/app/pacientes/components/triagem/formulario-triagem/formulario-triagem.component.html
@@ -172,7 +172,7 @@
                             pButton
                             type="button"
                             label="Cancelar"
-                            bTooltip="Cancelar registro de triagem."
+                            pTooltip="Cancelar registro de triagem."
                         ></button>
                     </div>
 
@@ -181,7 +181,7 @@
                             pButton
                             type="submit"
                             label="Salvar"
-                            bTooltip="Salvar registro de triagem."
+                            pTooltip="Salvar registro de triagem."
                         ></button>
                     </div>
                 </div>
