Alteração e exclusões de variáveis sem uso

--- a/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
@@ -49,6 +49,7 @@
                         <label>Data de Nascimento</label>
                     </span>
                 </div>
+
                 <div class="ui-g-12"></div>
                 <div class="ui-g-6 ui-md-06 ui-fluid">
                     <span class="md-inputfield">
@@ -81,6 +82,8 @@
                             pButton
                             type="button"
                             label="Cancelar"
+                            name="status"
+                            formContolName="status"
                             pTooltip="Cancelar registro de Pré-Cadastro."
                         ></button>
                     </div>
@@ -90,6 +93,8 @@
                             pButton
                             type="submit"
                             label="Salvar"
+                            name="status"
+                            formContolName="status"
                             pTooltip="Salvar registro de Pré-Cadastro."
                         ></button>
                     </div>
