Melhorias no Front de Pré-cadastro

--- a/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.css
+++ b/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.css
@@ -2,6 +2,7 @@ p-radioButton {
     margin-right: 5px;
     margin-left: 10px;
 }
-h3 {
-    text-align: center;
+b {
+    text-align: justify;
+    margin-left: 55px;
 }
