--- a/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
+++ b/frontend/src/app/pacientes/components/pre-cadastro/pre-cadastro.component.html
@@ -1,104 +1,98 @@
-<div class="ui-g ui-fluid">
-    <div class="ui-g-12">
-        <div class="preCad">
-            <h1>Incluir Pré-Cadastro de Pacientes</h1>
-            <div class="ui-g">
-                <div class="ui-g-6 ui-md-06 ui-fluid">
-                    <span class="md-inputfield">
-                        <input
-                            type="text"
-                            pInputText
-                            name="nomeDoPaciente"
-                            pTooltip="Infome o nome do Paciente."
-                        />
-                        <label>Nome paciente</label>
-                    </span>
-                </div>
-                <div class="ui-g-6 ui-md-06 ui-fluid">
-                    <span class="md-inputfield">
-                        <input
-                            type="text"
-                            pInputText
-                            name="nomeSocial"
-                            pTooltip="Infome o nome social do Paciente."
-                        />
-                        <label>Nome Social</label>
-                    </span>
-                </div>
-                <div class="ui-g-12"></div>
-                <div class="ui-g-6 ui-md-06 ui-fluid">
-                    <span class="md-inputfield">
-                        <input
-                            type="text"
-                            pInputText
-                            name="nomeDaMae"
-                            pTooltip="Infome o nome de mãe do Paciente."
-                        />
-                        <label>Nome da Mãe</label>
-                    </span>
-                </div>
+<div class="ui-g-12 ui-md-12 ui-fluid ui ui-float-label">
+    <div class="preCad ui-sm-12">
+        <h1>Incluir Pré-Cadastro de Pacientes</h1>
 
-                <div class="ui-g-6 ui-md-06 ui-fluid">
-                    <span class="md-inputfield">
-                        <input
-                            type="text"
-                            pInputText
-                            name="dataDeNascimento"
-                            pTooltip="Infome a data de nascimento do Paciente."
-                        />
-                        <label>Data de Nascimento</label>
-                    </span>
-                </div>
+        <div class="ui-g-8 ui-md-08 ui-fluid">
+            <span class="md-inputfield">
+                <input
+                    type="text"
+                    pInputText
+                    name="nomeDoPaciente"
+                    pTooltip="Infome o nome do Paciente."
+                />
+                <label>Nome paciente</label>
+            </span>
+        </div>
+        <div class="ui-g-4">
+            <span class="md-inputfield">
+                <input
+                    type="text"
+                    pInputText
+                    name="nomeSocial"
+                    pTooltip="Infome o nome social do Paciente."
+                />
+                <label>Nome Social</label>
+            </span>
+        </div>
+        <div class="ui-g-12"></div>
+        <div class="ui-g-8">
+            <span class="md-inputfield">
+                <input
+                    type="text"
+                    pInputText
+                    name="nomeDaMae"
+                    pTooltip="Infome o nome de mãe do Paciente."
+                />
+                <label>Nome da Mãe</label>
+            </span>
+        </div>
 
-                <div class="ui-g-12"></div>
-                <div class="ui-g-6 ui-md-06 ui-fluid">
-                    <span class="md-inputfield">
-                        <input
-                            type="text"
-                            pInputText
-                            name="numeroSus"
-                            mask="999999999999999"
-                            placeholder="___ ____ ____ ____"
-                            pTooltip="Informe o CNS do paciente."
-                        />
-                        <label>Nº do Cartão SUS</label>
-                    </span>
-                </div>
-                <div class="ui-g-12 ui-sm-12 ui-float-label">
-                    <div class="ui-g-3">
-                        <h3>Ativo</h3>
-                    </div>
-                    <div class="ui-g-12"></div>
-                    <div class="ui-g-3">
-                        <p-radioButton [(ngModel)]="selectedStatus" label="Sim"></p-radioButton>
-                        <p-radioButton [(ngModel)]="selectedStatus" label="Não"></p-radioButton>
-                    </div>
-                </div>
+        <div class="ui-g-4">
+            <span class="md-inputfield">
+                <input
+                    type="text"
+                    pInputText
+                    name="dataDeNascimento"
+                    pTooltip="Infome a data de nascimento do Paciente."
+                />
+                <label>Data de Nascimento</label>
+            </span>
+        </div>
 
-                <div class="ui-g-12 ui-sm-12 ui-float-label">
-                    <div class="ui-g-3"></div>
-                    <div class="ui-g-3">
-                        <button
-                            pButton
-                            type="button"
-                            label="Cancelar"
-                            name="status"
-                            formContolName="status"
-                            pTooltip="Cancelar registro de Pré-Cadastro."
-                        ></button>
-                    </div>
+        <div class="ui-g-12"></div>
+        <div class="ui-g-2">
+            <span class="md-inputfield">
+                <p-inputMask
+                    name="numeroSus"
+                    mask="999 9999 9999 9999"
+                    placeholder="___ ____ ____ ____"
+                    pTooltip="Informe o CNS do paciente."
+                ></p-inputMask>
+                <label>Nº do Cartão SUS</label>
+            </span>
+        </div>
+        <div class="ui-g-12">
+            <div class="ui-g-12">
+                <b>Ativo</b>
+            </div>
+            <div class="ui-g-12">
+                <p-radioButton [(ngModel)]="selectedStatus" label="Sim"></p-radioButton>
+                <p-radioButton [(ngModel)]="selectedStatus" label="Não"></p-radioButton>
+            </div>
+        </div>
 
-                    <div class="ui-g-3">
-                        <button
-                            pButton
-                            type="submit"
-                            label="Salvar"
-                            name="status"
-                            formContolName="status"
-                            pTooltip="Salvar registro de Pré-Cadastro."
-                        ></button>
-                    </div>
-                </div>
+        <div class="ui-g-12">
+            <div class="ui-g-3"></div>
+            <div class="ui-g-3">
+                <button
+                    pButton
+                    type="button"
+                    label="Cancelar"
+                    name="status"
+                    formContolName="status"
+                    pTooltip="Cancelar registro de Pré-Cadastro."
+                ></button>
+            </div>
+
+            <div class="ui-g-3">
+                <button
+                    pButton
+                    type="submit"
+                    label="Salvar"
+                    name="status"
+                    formContolName="status"
+                    pTooltip="Salvar registro de Pré-Cadastro."
+                ></button>
             </div>
         </div>
     </div>
