Corrige erro: `TS2554: Expected 0 arguments, but got 1`

--- a/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
+++ b/frontend/src/app/internacao/components/reserva-de-leito/reserva-de-leito.component.html
@@ -151,7 +151,7 @@
                     label="Reservar Leito"
                     icon="pi pi-check"
                     [disabled]="formGroup.invalid"
-                    (click)="reservarLeito($event)"
+                    (click)="reservarLeito()"
                 ></p-button>
             </div>
         </div>
