--- a/frontend/src/app/internacao/components/bloqueio-de-leito/bloqueio-de-leito.component.html
+++ b/frontend/src/app/internacao/components/bloqueio-de-leito/bloqueio-de-leito.component.html
@@ -121,7 +121,7 @@
                     label="Bloquear Leito"
                     icon="pi pi-check"
                     [disabled]="formGroup.invalid"
-                    (click)="reservarLeito($event)"
+                    (click)="reservarLeito()"
                 ></p-button>
             </div>
         </div>
